--- a/app/src/assets/scss/styles/nav.scss
+++ b/app/src/assets/scss/styles/nav.scss
@@ -93,6 +93,7 @@
         width: 100%;
         justify-content: center;
         align-items: center;
+        z-index: 1000;
     }
 
     #menu-toggle~.menu li {
